Fix styling for transactions on mobile phone

--- a/app/src/pages/transactions/transactions.scss
+++ b/app/src/pages/transactions/transactions.scss
@@ -13,6 +13,8 @@ page-transactions {
     color: #ccc;
     font-size: 1.6em;
     line-height: 40px;
+    margin-right: 0;
+    width: 30px;
     text-align: center;
 
     &.bonus,
